[TECH] 🐛fix: post content overflow with long code snippets
See the code block above the "Hide Macro Definitions" section in this post: 2023-11-25-how-to-write-unmaintainable-code.

min-width: 100% seems making .markdown-body using width max than the parent .container-details when there is <pre /> code block with really long contents. Still figuring out why. But I'll fix this blindly for now until it catches me again.

--- a/src/react/components/GithubFlavoredMarkdown/styles.styl
+++ b/src/react/components/GithubFlavoredMarkdown/styles.styl
@@ -1,5 +1,5 @@
 .markdown-body {
-  min-width: 100%;
+  width: 100%;
   margin: 32px auto;
 }
 
